--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a> <br>
+            <a href="pages/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="pages/github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a> <br>
+            <a href="pages/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="pages/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="pages/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
